intTests/test_type_errors/err029.log.good
Loading file "err029.saw"
Type errors:
  err029.saw:7:9-7:13: Kind mismatch: expected * -> * but found *
  err029.saw:7:20-7:27: Error: Type mismatch.
    Expected: t.0 Int
    Found:    Term

  err029.saw:7:9-7:17: Note: The type t.0 Int arises from this type annotation
  err029.saw:7:20-7:27: Note: The type Term arises from the type of this term


FAILED
