intTests/test_type_errors/err029.saw
//
// Too many arguments for type constructor: Term
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : Term Int = {{ 3 }};


